<resources>
    <string name="app_name">Note Invaders</string>
    <string name="stave_invaders_subtitle">Choose your mission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Invaders</string>
    <string name="nav_header_subtitle">www.darkerwaters.co.uk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="on_screen_keyboard">On-Screen Keyboard</string>
    <string name="microphone">Microphone</string>
    <string name="bluetooth_keyboard">Bluetooth Keyboard</string>
    <string name="usb_keyboard">USB Keyboard</string>
    <string name="keyboard_connection">Keyboard Connection</string>
    <string name="config_usb">Configure USB</string>
    <string name="scan_usb">Scan...</string>
    <string name="no_device">No device detected</string>
    <string name="no_midi_available">Sorry, your phone does not support MIDI</string>
    <string name="connect_usb">Connect instrument via\nUSB-OTG adapter:</string>
    <string name="midi_connect_help">Try to detect USB OTG devices in your phone\'s device connection settings...</string>
    <string name="no_ble_available">Sorry Bluetooth Low Energy is not available on your phone</string>
    <string name="midi_ble_connect_help">Try turning on BT and scanning again...</string>
    <string name="config_ble">Configure BT-LE</string>
    <string name="scan_bt">Scan for devices...</string>
    <string name="scan_bt_stop">Stop...</string>
    <string name="unknown">unknown</string>
    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="disconnecting">disconnecting</string>
    <string name="disconnected">disconnected</string>
    <string name="error">error</string>
    <string name="connection_status_help">The status of the current connection</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="attributions">Attributions</string>
    <string name="xAxis">--level--</string>
    <string name="yAxis"></string>
    <string name="clef_mixed">Mixed</string>
    <string name="clef_bass">Bass</string>
    <string name="clef_treble">Treble</string>
    <string name="treble_score_title">Top Tempo</string>
    <string name="hide_treble">Hide treble clef</string>
    <string name="hide_bass">Hide bass clef</string>
    <string name="levels">Levels Complete</string>
    <string name="treble_parent_score_title">Average\nTempo</string>
    <string name="bass_parent_score_title">Average\nTempo</string>
    <string name="tempo">Tempo</string>
    <string name="show_help">Show Letters</string>
    <string name="level_up">Level Up</string>
    <string name="disabled">Gone</string>
    <string name="letters">Note letters</string>
    <string name="game">Game</string>
    <string name="ended">Over</string>
    <string name="start">Start</string>
    <string name="game_over">Game Over</string>
    <string name="new_max">Which is a new maximum!</string>
    <string name="previously">Previously managed</string>
    <string name="lives_left">Lives left</string>
    <string name="shots_left">Shots left</string>
    <string name="hide_treble_desc">Hide the treble clef and all associated controls.</string>
    <string name="hide_bass_desc">Hide the bass clef and all associated controls.</string>
    <string name="mute_desc">Mute all sounds played.</string>
    <string name="mute">Mute</string>
    <string name="on_screen_piano">On-Screen Piano</string>
    <string name="config_key">Configure On-Screen Keyboard</string>
    <string name="pianoChoice">Piano Keyboard</string>
    <string name="lettersChoice">Lettered Keyboard</string>
    <string name="pianoChoice_desc">Play on the screen with a piano style keyboard</string>
    <string name="lettersChoice_desc">Play on the screen with a letter-based keyboard</string>
    <string name="lettersOnPiano">Show letters on the keyboard</string>
    <string name="lives_lost">lives lost</string>
    <string name="shots_missed">shots missed</string>
    <string name="hits">Notes hit successfully</string>
    <string name="instead_hit">Instead:</string>
    <string name="times">times</string>
    <string name="twice">twice</string>
    <string name="once">once</string>
    <string name="content_image">An image</string>
    <string name="content_microphone">microphone</string>
    <string name="note">musical note</string>
    <string name="content_piano">piano</string>
    <string name="content_heart">heart</string>
    <string name="content_bullet">bullet</string>
    <string name="content_treble">treble clef</string>
    <string name="content_more">show more content</string>
    <string name="content_bass">bass clef</string>
    <string name="content_ff">faster</string>
    <string name="content_rew">slower</string>
    <string name="content_prev">previous level</string>
    <string name="content_next">next level</string>
    <string name="content_letters">letters</string>
    <string name="content_keyboard">keyboard</string>
    <string name="content_usb">usb</string>
    <string name="content_mute">mute sound</string>
    <string name="content_progress">current progress</string>
    <string name="content_settings">settings</string>
    <string name="content_active">currently active</string>
    <string name="content_history">history</string>
    <string name="subtitle">This is the subtitle for the instrument</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="text">placeholder</string>
    <string name="noteTitle">C4</string>
    <string name="content_note">note</string>
    <string name="dataWipe">Wipe Data</string>
    <string name="dataWipe_desc">Delete all data and progress from application</string>
    <string name="onlyIfSure">Only Press if you are REALLY sure, all progress will be lost forever.</string>
    <string name="wipe">Wipe All Data</string>
    <string name="areYouSure">Are you REALLY REALLY Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="doYouWantToSkipTreble">It looks like you have played this treble level a lot (%1$d times) without getting past %2$d. Would you like to pass on to the next one?</string>
    <string name="doYouWantToSkipBass">It looks like you have played this bass level a lot (%1$d times) without getting past %2$d. Would you like to pass on to the next one?</string>
    <string name="a_to_g">A to G</string>
    <string name="c_key">Key of C</string>
    <string name="c_range">C to C</string>
    <string name="to">to</string>
    <string name="content_startLetter">Start note of the keyboard</string>
    <string name="content_endLetter">End note of the keyboard</string>
    <string name="content_endLess">Move the end down</string>
    <string name="content_endMore">Move the end up</string>
    <string name="content_startLess">Move the start down</string>
    <string name="content_startMore">Move the start up</string>
</resources>
