<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/secondaryColor"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <uk.co.darkerwaters.staveinvaders.views.MusicView
            android:id="@+id/noteMusicView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.3"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/noteTitle"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/heart"
                    android:contentDescription="@string/content_heart" />

                <TextView
                    android:id="@+id/textViewNumberMisses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/five" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bullet"
                    android:contentDescription="@string/content_bullet" />

                <TextView
                    android:id="@+id/textViewNumberMisfires"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/five" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/instead_hit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="@string/text" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>